<b>Key to developers</b>
<ul>
    <li>DP  - Dave Page
    <li>AP  - Andreas Pflug
    <li>JMP - Jean-Michel Poure
    <li>HS  - Hiroshi Saito
    <li>AHP - Adam H. Pendleton
    <li>MP  - Marc Persuy
</ul>
    
<ul>
    <li>V1.0.0
    <ul>
        <li>2003-10-26 AP  - precompiled headers under msw
        <li>2003-10-23 AP  - another SQL_ASCII fix
        <li>2003-10-23 AP  - Fix estimated rowcount
        <li>2003-10-20 AP  - wxTimeSpinCtrl
        <li>2003-10-20 HS  - Added support for column statistics.
        <li>2003-10-19 AP  - Loading of ctlSQLBox from resource
        <li>2003-10-19 AP  - User expiry
        <li>2003-10-18 DP  - Allow filtering of data in the edit grid.
        <li>2003-10-17 DP  - Allow sorting of data in the edit grid.
        <li>2003-10-16 AHP - Fix SSL compile bug.
        <li>2003-10-14 DP  - Update PostgreSQL docs to 7.4Beta4
        <li>2003-10-13 AP  - Fix ReadOnly security
        <li>2003-10-13 AP  - Fix encoding when connecting
        <li>2003-10-10 AP  - Query Tool execute to file
        <li>2003-10-07 DP  - Set cache value correctly when creating sequences.
        <li>2003-10-07 DP  - Handle array of definable length types correctly e.g. numeric(12,8)[].
        <li>2003-10-07 DP  - Display/use char instead of bpchar.
        <li>2003-10-07 AP  - Fixed the frogfrog constraint (doubling of names).
        <li>2003-10-06 AP  - Check if PQfnumber wants quoting or not
        <li>2003-10-06 AP  - Fix Unique Constraint creation
        <li>2003-10-06 AP  - Fix DlgUnit sizing, review of XRC files
        <li>2003-10-03 DP  - When connecting to a new server, if logon fails remember description as well as other info.
        <li>2003-10-03 DP  - Added locks tab to server status window.
        <li>2003-10-03 DP  - Reconnect to databases properly after failed attempt to drop.
        <li>2003-10-02 DP  - Re-enable the query builder.
        <li>2003-10-01 AP  - generic TreeItem renderer for gtk [+] / [-]