@@ -11,6 +11,7 @@
 <ul>
     <li>V1.0.0
     <ul>
+        <li>2003-10-31 AP  - counting non-constraint FKs for databases
         <li>2003-10-26 AP  - precompiled headers under msw
         <li>2003-10-23 AP  - another SQL_ASCII fix
         <li>2003-10-23 AP  - Fix estimated rowcount
